--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,17 @@
 
-*
-{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+
 
 #container
 {
-
-	background-color: black;
+	/*background-image: url(imagenes/chicos.jpg);*/
+	/*background-color: #5AE36E;*/
 }
 
 #fondo
 {
-	background-image: url(imagen/autobus.jpg);
+	
 
-	background-color: orange;
+	background-color: #5AE36E;
 }
 
 #aside
@@ -27,4 +22,14 @@
 #article
 {
 	background-color: #43C270;
+}
+
+#text {
+    z-index:100;
+    position:absolute;    
+    color:red;
+    font-size:100px;
+    font-weight:bold;
+    left:150px;
+    top:350px;
 }
