--- a/application/views/representantes/registro.twig
+++ b/application/views/representantes/registro.twig
@@ -1,12 +1,18 @@
 {% extends "tpl/layout.twig" %}
 {% block content %}
-    <form  id="frmrepresentante" action="{{ base_url(action) }}" method="post">
+   {% set attributes = {'id' :'frmrepresentante'} %}
+    {{ form_open(base_url(action), attributes) }}
+
         <div class="form-body">
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Cedula</label>
-                        <input type="text" class="form-control" id="cedula" name="cedula" value="{{representantes.cedula|default('')}}" placeholder="Cedula">
+
+                        {% set attributes = {'class' : 'control-label'} %} <!-- => seria un array example $atributes('class'=>'control-label') -->
+                        {{ form_label('Cedula', 'cedula', attributes) }} <!-- => echo form_label('WCedula', 'cedula', $attributes); -->
+
+                        {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Usuario', 'value':representantes.cedula|default('')} %}
+                        {{ form_input(data) }}
                     </div>
                 </div>
                 <!--/span-->
@@ -116,7 +122,7 @@
                 </div>
             </div>
         </div>
-    </form>
+    {{ form_close() }}
 {% endblock %}
 {% block script %}
     <script type="text/javascript">
