Se cambiaron todas las vistas a Twig mas tabla Parroquias en base

--- a/application/views/tpl/layout.twig
+++ b/application/views/tpl/layout.twig
@@ -19,6 +19,7 @@
     </div>
     <script src="{{ base_url('js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ base_url('js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ base_url('js/funciones1.js') }}"></script>
     <script type="text/javascript">
     $(document).ready(function() {
         $('.myCarousel').carousel({
