--- a/application/views/representantes/registro.twig
+++ b/application/views/representantes/registro.twig
@@ -11,7 +11,7 @@
                         {% set attributes = {'class' : 'control-label'} %} <!-- => seria un array example $atributes('class'=>'control-label') -->
                         {{ form_label('Cedula', 'cedula', attributes) }} <!-- => echo form_label('WCedula', 'cedula', $attributes); -->
 
-                        {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Usuario', 'value':representantes.cedula|default('')} %}
+                        {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Cedula', 'value':representantes.cedula|default('')} %}
                         {{ form_input(data) }}
                     </div>
                 </div>
@@ -47,16 +47,11 @@
                         <input type="text" class="form-control" id="telefono" name="telefono" value="{{representantes.telefono|default('')}}" placeholder="Teléfono Local:">
                     </div>
                 </div>
-                <!--/span-->
+
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Estatus</label>
-                        <select name="estatus" id="estatus" class="form-control">
-                            <option value="0">Selecciona: </option>
-                            <option value="r1">Representante Principal</option>
-                            <option value="r2">Representante Secundario</option>
-                            <option value="r3">Representante Autorizado</option>
-                        </select>
+                        <label class="control-label">Correo</label>
+                        <input type="text" class="form-control" id="email" name="email" value="{{representantes.email|default('')}}" placeholder="Correo:">
                     </div>
                 </div>
             </div>
@@ -78,51 +73,54 @@
                         </select>
                     </div>
                 </div>
+            
+
                 <div class="col-md-6">
                     <div class="form-group">
                         <label class="control-label">Municipio</label>
                         <select name="municipios_id" id="municipios_id" class="form-control">
-                            <option value="0">Selecciona: </option>
+                            <option value="0">Selecciona: {{docentes.municipio|default('')}}</option>
                         </select>
                     </div>
                 </div>
             </div>
-
+            
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label class="control-label">Parroquia</label>
                         <select name="parroquias_id" id="parroquias_id" class="form-control">
-                            <option value="0">Selecciona: </option>
+                            <option value="0">Selecciona: {{docentes.parroquia|default('')}}</option>
                         </select>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <div class="form-group">
                         <label class="control-label">Sector</label>
-                        <select name="sectores_id" id="sectores_id" class="form-control">
+                        <select name="parroquias_id" id="parroquias_id" class="form-control">
                             <option value="0">Selecciona: </option>
                         </select>
                     </div>
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-md-12">
                     <textarea rows="5" name="direccion" id="direccion" class="form-control" placeholder="Escriba nombre de Calle y N° de casa:">{{representantes.direccion|default('')}}</textarea>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-4 col-md-offset-4">
-                        <button style="background-color: rgba(0, 0, 200, 0)" type="button" id="guardar" class="btn btn-block">
-                            <img width="150" src="{{ base_url('imagenes/botonGuardar.png') }}" alt="">
-                        </button>
-                    </div>
+            <div class="col-md-12">
+                <div class="col-md-4 col-md-offset-4">
+                    <button style="background-color: rgba(0, 0, 200, 0)" type="button" id="guardar" class="btn btn-block">
+                        <img width="150" src="{{ base_url('imagenes/botonGuardar.png') }}" alt="">
+                    </button>
                 </div>
             </div>
         </div>
     {{ form_close() }}
+
 {% endblock %}
 {% block script %}
     <script type="text/javascript">
@@ -171,14 +169,14 @@
 
             $('#municipios_id').on('change',function () {
                 var municipios_id = $(this).val();
-                $("#sectores_id").find('option:gt(0)').remove().end();
+                $("#parroquias_id").find('option:gt(0)').remove().end();
                 if(municipios_id > 0){
                     $.get( "/preescolar/parroquias/Parroquias/searchParMun/"+municipios_id, function( response ) {
                         var $option = '';
                         $.each(response, function(i, parroquias) {
                             $option += '<option value="'+parroquias.id+'">'+parroquias.parroquia+'</options>'
                         });
-                        $("#sectores_id").append($option)
+                        $("#parroquias_id").append($option)
                     }, 'json');
                 }
             })
