--- a/application/views/tpl/sidebar.twig
+++ b/application/views/tpl/sidebar.twig
@@ -6,25 +6,26 @@
                 <li>
                     <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu1" aria-expanded="false">Registros</a>
                     <ul class="nav collapse" id="submenu1" role="menu" aria-labelledby="btn-1">
-                        <li><a class="list-group-item" href="{{ base_url('representantes/representantes')}}">Representanes</a></li>
-                        <li><a class="list-group-item" href="#">Link 1.2</a></li>
-                        <li><a class="list-group-item" href="#">Link 1.3</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('representantes/representantes') }}">Representanes</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('docentes/docentes') }}">Docentes</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('alumnos/alumnos') }}">Alumnos</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu2" aria-expanded="false">Link2</a>
                     <ul class="nav collapse" id="submenu2" role="menu" aria-labelledby="btn-1">
-                        <li><a class="list-group-item" href="#">Link 2.1</a></li>
-                        <li><a class="list-group-item" href="#">Link 2.2</a></li>
-                        <li><a class="list-group-item" href="#">Link 2.3</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('estados/estados') }}">Estados</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('municipios/municipios') }}">Municipios</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('parroquias/parroquias') }}">Parroquias</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('sectores/sectores') }}">Sectores</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu3" aria-expanded="false">Link3</a>
                     <ul class="nav collapse" id="submenu3" role="menu" aria-labelledby="btn-1">
-                        <li><a class="list-group-item" href="#">Link 3.1</a></li>
-                        <li><a class="list-group-item" href="#">Link 3.2</a></li>
-                        <li><a class="list-group-item" href="#">Link 3.3</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('grados/grados') }}">Grados</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('secciones/secciones') }}">Secciones</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('anio/anio') }}">Año Escolar</a></li>
                     </ul>
                 </li>
             </ul>
