--- a/application/views/representantes/registro.twig
+++ b/application/views/representantes/registro.twig
@@ -1,124 +1,122 @@
 {% extends "tpl/layout.twig" %}
 {% block content %}
-   {% set attributes = {'id' :'frmrepresentante'} %}
+    {% set attributes = {'id' :'frmrepresentante'} %}
     {{ form_open(base_url(action), attributes) }}
+    <div class="form-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    {% set attributes = {'class' : 'control-label'} %} <!-- => seria un array example $atributes('class'=>'control-label') -->
+                    {{ form_label('Cedula:  <span id="msgCedula"></span>', 'cedula', attributes) }} <!-- => echo form_label('WCedula', 'cedula', $attributes); -->
 
-        <div class="form-body">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-
-                        {% set attributes = {'class' : 'control-label'} %} <!-- => seria un array example $atributes('class'=>'control-label') -->
-                        {{ form_label('Cedula', 'cedula', attributes) }} <!-- => echo form_label('WCedula', 'cedula', $attributes); -->
-
-                        {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Cedula', 'value':representantes.cedula|default('')} %}
-                        {{ form_input(data) }}
-                    </div>
+                    {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Cedula', 'value':representantes.cedula|default('')} %}
+                    {{ form_input(data) }}
                 </div>
-                <!--/span-->
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre_re" name="nombre_re" value="{{representantes.nombre_re|default('')}}" placeholder="Nombre">
-                    </div>
+            </div>
+            <!--/span-->
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Nombre:_</label>
+                    <input type="text" class="form-control" id="nombre_re" name="nombre_re" value="{{representantes.nombre_re|default('')}}" placeholder="Nombre">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Apellido: </label>
+                    <input type="text" class="form-control" id="apellido_re" name="apellido_re" value="{{representantes.apellido_re|default('')}}" placeholder="Apellido">
+                </div>
+            </div>
+            <!--/span-->
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Celular: </label>
+                    <input type="text" class="form-control" id="celular" name="celular" value="{{representantes.celular|default('')}}" placeholder="Teléfono Celular">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Telefono: </label>
+                    <input type="text" class="form-control" id="telefono" name="telefono" value="{{representantes.telefono|default('')}}" placeholder="Teléfono Local:">
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Apellido</label>
-                        <input type="text" class="form-control" id="apellido_re" name="apellido_re" value="{{representantes.apellido_re|default('')}}" placeholder="Apellido">
-                    </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Correo: <span id="msgEmail"></span></label>
+                    <input type="text" class="form-control" id="email" name="email" value="{{representantes.email|default('')}}" placeholder="Correo:">
                 </div>
-                <!--/span-->
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Celular</label>
-                        <input type="text" class="form-control" id="celular" name="celular" value="{{representantes.celular|default('')}}" placeholder="Teléfono Celular">
-                    </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Estado: </label>
+                    <select name="estados_id" id="estados_id" class="form-control">
+                        <option value="0">Selecciona: </option>
+                        {% for estado in estados %}
+                            {% set selected = ''%}
+                            {% if estado.id == representantes.estados_id %}
+                                {% set selected = 'selected="selected"'%}
+                            {% endif %}
+                            <option {{selected}} value="{{estado.id}}">{{estado.estado}}</option>
+
+                        {% endfor %}
+                    </select>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Telefono</label>
-                        <input type="text" class="form-control" id="telefono" name="telefono" value="{{representantes.telefono|default('')}}" placeholder="Teléfono Local:">
-                    </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Municipio: </label>
+                    <select name="municipios_id" id="municipios_id" class="form-control">
+                        <option value="0">Selecciona: {{representantes.municipio|default('')}}</option>
+                    </select>
                 </div>
-
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Correo</label>
-                        <input type="text" class="form-control" id="email" name="email" value="{{representantes.email|default('')}}" placeholder="Correo:">
-                    </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Parroquia: </label>
+                    <select name="parroquias_id" id="parroquias_id" class="form-control">
+                        <option value="0">Selecciona: {{representantes.parroquia|default('')}}</option>
+                    </select>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Estado</label>
-                        <select name="estados_id" id="estados_id" class="form-control">
-                            <option value="0">Selecciona: </option>
-                            {% for estado in estados %}
-                                {% set selected = ''%}
-                                {% if estado.id == representantes.estados_id %}
-                                    {% set selected = 'selected="selected"'%}
-                                {% endif %}
-                                <option {{selected}} value="{{estado.id}}">{{estado.estado}}</option>
-
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-            
-
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Municipio</label>
-                        <select name="municipios_id" id="municipios_id" class="form-control">
-                            <option value="0">Selecciona: {{docentes.municipio|default('')}}</option>
-                        </select>
-                    </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="control-label">Sector: </label>
+                    <select name="sectores_id" id="sectores_id" class="form-control">
+                        <option value="0">Selecciona: {{representantes.sector|default('')}}</option>
+                    </select>
                 </div>
             </div>
-            
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Parroquia</label>
-                        <select name="parroquias_id" id="parroquias_id" class="form-control">
-                            <option value="0">Selecciona: {{docentes.parroquia|default('')}}</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Sector</label>
-                        <select name="parroquias_id" id="parroquias_id" class="form-control">
-                            <option value="0">Selecciona: </option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-md-12">
-                    <textarea rows="5" name="direccion" id="direccion" class="form-control" placeholder="Escriba nombre de Calle y N° de casa:">{{representantes.direccion|default('')}}</textarea>
-                </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-12">
+                <label class="control-label">Dirección: </label>
+                <textarea rows="5" name="direccion" id="direccion" class="form-control" placeholder="Escriba nombre de Calle y N° de casa:">{{representantes.direccion|default('')}}</textarea>
             </div>
 
             <div class="col-md-12">
                 <div class="col-md-4 col-md-offset-4">
-                    <button style="background-color: rgba(0, 0, 200, 0)" type="button" id="guardar" class="btn btn-block">
+                    <button name="submit_reg" style="background-color: rgba(0, 0, 200, 0)" type="button" id="guardar" class="btn btn-block">
                         <img width="150" src="{{ base_url('imagenes/botonGuardar.png') }}" alt="">
                     </button>
-                </div>
-            </div>
+                </div>    
+            </div>    
         </div>
+    </div>
     {{ form_close() }}
 
 {% endblock %}
@@ -153,6 +151,16 @@
         }
     });
 
+            $('#guardar').click(function(){
+                if($('#cedula').val() == ''){
+                    alert('Debe ingresar la Cedula');
+                    $('#cedula').focus();
+                }else{
+            //alert('Enviar');
+            $('#frmrepresentante').submit();
+        }
+    });
+
             $('#estados_id').on('change',function () {
                 var estados_id = $(this).val();
                 $("#municipios_id").find('option:gt(0)').remove().end();
@@ -181,6 +189,19 @@
                 }
             })
 
+            $('#parroquias_id').on('change',function () {
+                var parroquias_id = $(this).val();
+                $("#sectores_id").find('option:gt(0)').remove().end();
+                if(parroquias_id > 0){
+                    $.get( "/preescolar/sectores/Sectores/searchSerPar/"+parroquias_id, function( response ) {
+                        var $option = '';
+                        $.each(response, function(i, sectores) {
+                            $option += '<option value="'+sectores.id+'">'+sectores.sector+'</options>'
+                        });
+                        $("#sectores_id").append($option)
+                    }, 'json');
+                }
+            })
         });
     </script>
 {% endblock %}
