--- a/application/views/inicio/inicio.twig
+++ b/application/views/inicio/inicio.twig
@@ -1,11 +1,37 @@
 {% extends "tpl/layout.twig" %}
 {% block content %}
-    <h1>Hello, world!</h1>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-    <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-
+			
+	<div id="myCarousel" class="carousel slide text-center">
+		<article class="text-center">
+		      <ol class="carousel-indicators">
+		        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		        <li data-target="#myCarousel" data-slide-to="1"></li>
+		        <li data-target="#myCarousel" data-slide-to="2"></li>
+		        <li data-target="#myCarousel" data-slide-to="3"></li>
+		        <li data-target="#myCarousel" data-slide-to="4"></li>
+		        <li data-target="#myCarousel" data-slide-to="5"></li>
+		        <li data-target="#myCarousel" data-slide-to="6"></li>
+		        <li data-target="#myCarousel" data-slide-to="7"></li>
+		      </ol>
+		      <!-- Carousel items -->
+		      <div class="carousel-inner">
+		        <div class="active item"><img src="{{ base_url('imagenes/paisaje.jpg') }}" alt="banner1" /></div>
+		        <div class="item"><img src="{{ base_url('imagenes/school1.jpg') }}" alt="banner2" /></div>
+		        <div class="item"><img src="{{ base_url('imagenes/ABC1.jpg') }}" alt="banner3" /></div>
+		        <div class="item"><img src="{{ base_url('imagenes/libro1.jpg') }}" alt="banner4" /></div>
+		        <div class="item"><img src="{{ base_url('imagenes/autobus1.jpg') }}" alt="banner5" /></div>
+		        <div class="item"><img src="{{ base_url('imagenes/Simpsons1.jpg') }}" alt="banner6" /></div><br>
+		      </div>
+		      <!-- Carousel nav -->
+		      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+		      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+		</article>
+		<script type="text/javascript">
+            $(document).ready(function() {
+                $('myCarousel').carousel({
+                        interval: 2000
+                });
+            });
+        </script>
+	</div>
 {% endblock %}
