--- a/application/views/tpl/header.twig
+++ b/application/views/tpl/header.twig
@@ -1,30 +1,31 @@
-<div>
 
-<header id="header" class="">
-    <img style="float: left" alt="" src="{{ base_url('imagenes/logo.png') }}"/>
-    <span id="cerrar">Cerrar Sesi&oacute;n</span>
-    <span style="float: right;margin-right: 1%;font-weight: bold">Bienvenido(a), Administrador Administrador</span>
-    <div class="content" style="margin:auto;">
-        <img src="{{ base_url('imagenes/bg_menu_b.png') }}" style="width: 910px;"/>
-        <img src="{{ base_url('imagenes/bg_menu_t.png') }}" style="margin-top: -33px; z-index: 0; height: 50px; width: 882px;"/>
-        <div id="menu_boton">
-            <ul>
-                <li>
-                    <span data-toggle="collapse" data-parent="#accordion" href="#registros">REGISTROS</span>
-                </li>
-                <li>
-                    <span data-toggle="collapse" data-parent="#accordion" href="#procesos">PROCESOS</span>
-                </li>
-
-                <li>
-                    <span data-toggle="collapse" data-parent="#accordion" href="#reportes">REPORTES</span>
-                </li>
-                <li>
-                    <span data-toggle="collapse" data-parent="#accordion" href="#mantenimiento">MANTENIMIENTO</span>
-                </li>
-            </ul>
+<div class="content col-md-12">
+    <header id="header" class="">
+        <div class="col-md-offset-1 hidden-xs">
+            <img class="radio img-circle" width="100" style="float: left" alt="" src="{{ base_url('imagenes/bus_fondo.jpg') }}"/>
         </div>
-    </div>
-</header>
+        <span style="float: right;margin-right: 1%;font-weight: bold">Bienvenido(a), Administrador Administrador</span>
+        <div class="col-md-offset-3 hidden-xs" style="">
+        <span id="cerrar">Cerrar Sesi&oacute;n</span>
+            <img src="{{ base_url('imagenes/bg_menu_b.png') }}" style="width: 910px;"/>
+            <img src="{{ base_url('imagenes/bg_menu_t.png') }}" style="margin-top: -33px; z-index: 0; height: 50px; width: 882px;"/>
+            {# <div id="menu_boton">
+                <ul>
+                    <li>
+                        <span data-toggle="collapse" data-parent="#accordion" href="#registros">REGISTROS</span>
+                    </li>
+                    <li>
+                        <span data-toggle="collapse" data-parent="#accordion" href="#procesos">PROCESOS</span>
+                    </li>
 
+                    <li>
+                        <span data-toggle="collapse" data-parent="#accordion" href="#reportes">REPORTES</span>
+                    </li>
+                    <li>
+                        <span data-toggle="collapse" data-parent="#accordion" href="#mantenimiento">MANTENIMIENTO</span>
+                    </li>
+                </ul>
+            </div> #}
+        </div>
+    </header>
 </div>
