--- a/application/views/tpl/menu.twig
+++ b/application/views/tpl/menu.twig
@@ -7,13 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Preescolar</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="{{ base_url() }}">Inicio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">Conócenos</a></li>
+                <li><a href="#contact">Contactos</a></li>
             </ul>
         </div>
     </div>
