--- a/application/views/tpl/sidebar.twig
+++ b/application/views/tpl/sidebar.twig
@@ -2,9 +2,9 @@
     <div class="list-group">
         <nav>
             <ul class="nav">
-                <a href="#" class="list-group-item active">I'm the Sidebar</a>
+                <a href="#" class="list-group-item active text-center"><img width="100" src="{{ base_url('imagenes/Menu-Verde-89740.gif') }}" alt=""></a>
                 <li>
-                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu1" aria-expanded="false">Registros</a>
+                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu1" aria-expanded="false">Registros Datos</a>
                     <ul class="nav collapse" id="submenu1" role="menu" aria-labelledby="btn-1">
                         <li><a class="list-group-item" href="{{ base_url('representantes/representantes') }}">Representanes</a></li>
                         <li><a class="list-group-item" href="{{ base_url('docentes/docentes') }}">Docentes</a></li>
@@ -12,7 +12,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu2" aria-expanded="false">Link2</a>
+                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu2" aria-expanded="false">Registros Lugares</a>
                     <ul class="nav collapse" id="submenu2" role="menu" aria-labelledby="btn-1">
                         <li><a class="list-group-item" href="{{ base_url('estados/estados') }}">Estados</a></li>
                         <li><a class="list-group-item" href="{{ base_url('municipios/municipios') }}">Municipios</a></li>
@@ -21,11 +21,18 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu3" aria-expanded="false">Link3</a>
+                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu3" aria-expanded="false">Registros Grados</a>
                     <ul class="nav collapse" id="submenu3" role="menu" aria-labelledby="btn-1">
                         <li><a class="list-group-item" href="{{ base_url('grados/grados') }}">Grados</a></li>
                         <li><a class="list-group-item" href="{{ base_url('secciones/secciones') }}">Secciones</a></li>
                         <li><a class="list-group-item" href="{{ base_url('anio/anio') }}">Año Escolar</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu4" aria-expanded="false">Otros</a>
+                    <ul class="nav collapse" id="submenu4" role="menu" aria-labelledby="btn-1">
+                        <li><a class="list-group-item" href="{{ base_url('login/usuarios') }}">Login</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('register/register') }}">Register</a></li>
                     </ul>
                 </li>
             </ul>
