se trabajo en validaciones y vistas

--- a/application/views/alumnos/detalles.twig
+++ b/application/views/alumnos/detalles.twig
@@ -39,14 +39,14 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="control-label">Estado: {{alumnos.estado}}</label>
+                    <div class="form-group"><span>Lugar de Nacimiento: </span>
+                        <label class="control-label">Municipio: {{alumnos.municipio }}, Estado: {{alumnos.estado}}</label>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Municipio: {{alumnos.municipio }}</label>
+                        <label class="control-label"></label>
                     </div>
                 </div>
             </div>
