--- a/application/views/anio/anio.twig
+++ b/application/views/anio/anio.twig
@@ -27,7 +27,7 @@
 			</table>
 				<div class="col-md-4 col-md-offset-4">
 					<a class="btn-block" href="{{ base_url('anio/anio') }}">
-					<img width="130" src="{{ base_url('imagenes/subir-boton.png') }}" alt=""></a>
+					<img width="130" src="{{ base_url('imagenes/subir-boton.png') }}" title="Subir" alt=""></a>
 				</div>
 			</div><br>
 {% endblock %}
