--- a/application/views/tpl/header.twig
+++ b/application/views/tpl/header.twig
@@ -6,7 +6,7 @@
         </div>
         <span style="float: right;margin-right: 1%;font-weight: bold">Bienvenido(a), Administrador Administrador</span>
         <div class="col-md-offset-3 hidden-xs" style="">
-        <span id="cerrar">Cerrar Sesi&oacute;n</span>
+        <span id="cerrar"><a href="#" title="">Cerrar Sesi&oacute;n</a></span>
             <img src="{{ base_url('imagenes/bg_menu_b.png') }}" style="width: 910px;"/>
             <img src="{{ base_url('imagenes/bg_menu_t.png') }}" style="margin-top: -33px; z-index: 0; height: 50px; width: 882px;"/>
             {# <div id="menu_boton">
