--- a/application/views/tpl/sidebar.twig
+++ b/application/views/tpl/sidebar.twig
@@ -6,7 +6,7 @@
                 <li>
                     <a class="list-group-item" href="#" id="btn-1" data-toggle="collapse" data-target="#submenu1" aria-expanded="false">Registros Datos</a>
                     <ul class="nav collapse" id="submenu1" role="menu" aria-labelledby="btn-1">
-                        <li><a class="list-group-item" href="{{ base_url('representantes/representantes') }}">Representanes</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('representantes/representantes') }}">Representantes</a></li>
                         <li><a class="list-group-item" href="{{ base_url('docentes/docentes') }}">Docentes</a></li>
                         <li><a class="list-group-item" href="{{ base_url('alumnos/alumnos') }}">Alumnos</a></li>
                     </ul>
@@ -33,6 +33,7 @@
                     <ul class="nav collapse" id="submenu4" role="menu" aria-labelledby="btn-1">
                         <li><a class="list-group-item" href="{{ base_url('login/usuarios') }}">Login</a></li>
                         <li><a class="list-group-item" href="{{ base_url('register/register') }}">Register</a></li>
+                        <li><a class="list-group-item" href="{{ base_url('register/hola') }}">Hola</a></li>
                     </ul>
                 </li>
             </ul>
