--- a/application/views/estados/registro.twig
+++ b/application/views/estados/registro.twig
@@ -5,10 +5,13 @@
 
         <div class="form-body">
             <div class="row">
+                <div class="col-md-12"><h2>{{ titulo }} Estado</h2></div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Estado</label>
-                        <input type="text" class="form-control" id="estado" name="estado" value="{{estados.estado|default('')}}" placeholder="Estado:">
+                        {{ form_label('Estado', 'Estado', attributes) }}
+                        {% set attributes = {'class' : 'control-label'} %}
+                        {% set data = {'name':'estado', 'id' : 'estado', 'class' : 'form-control ', 'placeholder':'Estado', 'value':estados.estado|default('')} %}
+                        {{ form_input(data) }}
                     </div>
                 </div>
 
@@ -29,13 +32,12 @@
         $(document).ready(function() {
             $('#guardar').click(function(){
                 if($('#estado').val() == ''){
-                    alert('Debe ingresar el año');
+                    alert('Debe ingresar el Estado');
                     $('#estado').focus();
-            }else{
-                alert('Enviar');
-                $('#frmestado').submit();
-            }
-    })
-});
+                }else{
+                    $('#frmestado').submit();
+                }
+            })
+        });
     </script>
 {% endblock %}
