--- a/application/views/representantes/registro.twig
+++ b/application/views/representantes/registro.twig
@@ -4,20 +4,22 @@
     {{ form_open(base_url(action), attributes) }}
     <div class="form-body">
         <div class="row">
+                <div class="col-md-12"><h2>{{ titulo }} Representante</h2></div>
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} <!-- => seria un array example $atributes('class'=>'control-label') -->
-                    {{ form_label('Cedula:  <span id="msgCedula"></span>', 'cedula', attributes) }} <!-- => echo form_label('WCedula', 'cedula', $attributes); -->
-
+                    {% set attributes = {'class' : 'control-label'} %}
+                    {{ form_label('Cedula:  <span id="msgCedula"></span>', 'cedula', attributes) }}
                     {% set data = {'name':'cedula', 'id' : 'cedula', 'class' : 'form-control ', 'placeholder':'Cedula', 'value':representantes.cedula|default('')} %}
                     {{ form_input(data) }}
                 </div>
             </div>
-            <!--/span-->
+            
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Nombre:_</label>
-                    <input type="text" class="form-control" id="nombre_re" name="nombre_re" value="{{representantes.nombre_re|default('')}}" placeholder="Nombre">
+                    {% set attributes = {'class' : 'control-label'} %} 
+                    {{ form_label('Nombre:  <span id="msgNombre"></span>', 'nombre', attributes) }}
+                    {% set data = {'name':'nombre_re', 'id' : 'nombre_re', 'class' : 'form-control ', 'placeholder':'Nombre', 'value':representantes.nombre_re|default('')} %}
+                    {{ form_input(data) }}
                 </div>
             </div>
         </div>
@@ -25,15 +27,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Apellido: </label>
-                    <input type="text" class="form-control" id="apellido_re" name="apellido_re" value="{{representantes.apellido_re|default('')}}" placeholder="Apellido">
+                    {% set attributes = {'class' : 'control-label'} %} 
+                    {{ form_label('Apellido:  <span id="msgApellido"></span>', 'apellido', attributes) }}
+                    {% set data = {'name':'apellido_re', 'id' : 'apellido_re', 'class' : 'form-control ', 'placeholder':'Apellido', 'value':representantes.apellido_re|default('')} %}
+                    {{ form_input(data) }}
                 </div>
             </div>
-            <!--/span-->
+            
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Celular: </label>
-                    <input type="text" class="form-control" id="celular" name="celular" value="{{representantes.celular|default('')}}" placeholder="Teléfono Celular">
+                    {% set attributes = {'class' : 'control-label'} %} 
+                    {{ form_label('Celular:  <span id="msgCelular"></span>', 'celular', attributes) }}
+                    {% set data = {'name':'celular', 'id' : 'celular', 'class' : 'form-control ', 'placeholder':'Teléfono Celular', 'value':representantes.celular|default('')} %}
+                    {{ form_input(data) }}
                 </div>
             </div>
         </div>
@@ -41,15 +47,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Telefono: </label>
-                    <input type="text" class="form-control" id="telefono" name="telefono" value="{{representantes.telefono|default('')}}" placeholder="Teléfono Local:">
+                    {% set attributes = {'class' : 'control-label'} %} 
+                    {{ form_label('Telefono:  <span id="msgTelefono"></span>', 'telefono', attributes) }}
+                    {% set data = {'name':'telefono', 'id' : 'telefono', 'class' : 'form-control ', 'placeholder':'Teléfono Local', 'value':representantes.telefono|default('')} %}
+                    {{ form_input(data) }}
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label">Correo: <span id="msgEmail"></span></label>
-                    <input type="text" class="form-control" id="email" name="email" value="{{representantes.email|default('')}}" placeholder="Correo:">
+                    {% set attributes = {'class' : 'control-label'} %} 
+                    {{ form_label('Correo:  <span id="msgEmail"></span>', 'correo', attributes) }}
+                    {% set data = {'name':'email', 'id' : 'email', 'class' : 'form-control ', 'placeholder':'Correo', 'value':representantes.email|default('')} %}
+                    {{ form_input(data) }}
                 </div>
             </div>
         </div>
@@ -65,8 +75,7 @@
                             {% if estado.id == representantes.estados_id %}
                                 {% set selected = 'selected="selected"'%}
                             {% endif %}
-                            <option {{selected}} value="{{estado.id}}">{{estado.estado}}</option>
-
+                        <option {{selected}} value="{{estado.id}}">{{estado.estado}}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -110,7 +119,7 @@
 
             <div class="col-md-12">
                 <div class="col-md-4 col-md-offset-4">
-                    <button name="submit_reg" style="background-color: rgba(0, 0, 200, 0)" type="button" id="guardar" class="btn btn-block">
+                    <button name="submit_reg" style="background-color: rgba(0, 0, 200, 0)" type="button" onclick="button" id="guardar" class="btn btn-block">
                         <img width="150" src="{{ base_url('imagenes/botonGuardar.png') }}" alt="">
                     </button>
                 </div>    
@@ -145,16 +154,7 @@
                 }else if($('#direccion').val() == ''){
                     alert('Debe ingresar Nombre de calle y N° de casa');
                     $('#direccion').focus();
-                }else{
-            //alert('Enviar');
-            $('#frmrepresentante').submit();
-        }
-    });
-
-            $('#guardar').click(function(){
-                if($('#cedula').val() == ''){
-                    alert('Debe ingresar la Cedula');
-                    $('#cedula').focus();
+                
                 }else{
             //alert('Enviar');
             $('#frmrepresentante').submit();
