--- a/application/views/representantes/representantes.twig
+++ b/application/views/representantes/representantes.twig
@@ -36,5 +36,9 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <div class="col-md-4 col-md-offset-5">
+                <a class="btn-block" href="{{ base_url('representantes/representantes') }}">
+                <img width="130" src="{{ base_url('imagenes/subir-boton.png') }}" alt=""></a>
+            </div>
         </div>
 {% endblock %}
